# geothermsim

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  requirements.txt  setup.cfg
.github/workflows/: release.yml
geothermax/: __init__.py  basis.py  borefield.py  multipole.py  network.py  path.py
geothermax/borefield/: borefield.py  network.py
geothermax/borehole/: __init__.py  _tube.py  borehole.py  single_u_tube.py
geothermax/ground_heat_exchanger/: u_tube_heat_exchanger.py
geothermax/plot/: __init__.py  plot_ground_heat_exchanger.py
geothermax/simulation/: __init__.py  _temporal_superposition.py  gfunction.py  load_aggregation.py  load_history_reconstruction.py  simulation.py
geothermax/thermal_resistance/: conduction_thermal_resistance.py  reynolds_number.py
geothermax/utilities/: __init__.py  _format_axis.py  comb.py  plot_basis.py  plot_borefield.py  plot_borehole.py  plot_path.py
geothermsim/: __init__.py  basis.py  path.py
notebooks/: 01 - Ground heat transfer.ipynb  02 - Borehole heat transfer.ipynb  03a - Comparison - Field of 8 inclined boreholes with straight trajectories.ipynb  03b - Convergence - Field of 8 inclined boreholes with straight trajectories.ipynb  03b_Convergence_Field_of_8_inclined_boreholes_with_straight_trajectories.ipynb  04a - g-function - Field of 11 inclined boreholes with curved trajectories.ipynb  04a_g-function_Field_of_11_inclined_boreholes_with_curved_trajectories.ipynb  04b - Simulation - Field of 11 inclined boreholes with curved trajectories.ipynb  Eskilson-optimal.txt  README.md
(+32 files in other folders)
