[metadata]
name = geothermax
version = 0.1.0.dev0
description = Higher order modelling of geothermal boreholes using JAX
author = Massimo Cimmino
author_email = massimo.cimmino@polymtl.ca

[options]
packages = geothermax
install_requires =
	jax >= 0.5.0
    matplotlib >= 3.10.0
    numpy >= 2.2.2
	pandas >= 2.2.3
    scipy >= 1.15.1
python_requires = >= 3.12
