[metadata]
name = geothermsim
version = 0.1.2
author = Massimo Cimmino
author_email = massimo.cimmino@polymtl.ca
description = Scalable semi-analytical heat transfer simulation of geothermal borehole fields
long_description_content_type = text/markdown
long_description = file: README.md, LICENSE.md
keywords = Geothermal, Ground-source, Ground heat exchangers
url = https://github.com/MassimoCimmino/geothermsim
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
	jax >= 0.6.0
    matplotlib >= 3.10.0
    numpy >= 2.2.2
	pandas >= 2.2.3
	SecondaryCoolantProps >= 1.3.0
    scipy >= 1.15.1

[options.packages.find]
exclude =
    notebooks*

python_requires = >= 3.12
